fix(climateRationale): typo

--- a/notebooks/climateRationale/notebook.qmd
+++ b/notebooks/climateRationale/notebook.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: "Formulate A Climate Rational"
+pagetitle: "Formulate A Climate Rationale"
 nb-authors:
   - Brayden Youngberg
   - Pete Stewart
@@ -315,7 +315,7 @@ loaderDiv("plotHazardExposure");
 ```{ojs}
 // This cell is to contain all the headings and the notebook title
 nbTitle = _lang({
-  en: "Formulate A Climate Rational",
+  en: "Formulate A Climate Rationale",
   fr: "Formuler une justification climatique",
 });
 
